# EdiHeadyTrack

./: .coveragerc  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  classes.dot  example.ipynb  main.py  packages.dot  phantom.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.py  testing_opencv.py  tom_curry.py
.github/workflows/: pytesting.yml
EdiHeadyTrack/: __init__.py  archiving.py  calibrating.py  calibration.py  camera.py  comparing.py  comparison.py  facedetector.py  filter.py  filtering.py  guiOld.py  head.py  headkinematics.py  imu.py  imukinematics.py  load_sample.py  logging.py  math_utils.py  plot.py  plot_utils.py  posedetector.py  processing.py  requirements.txt  sensordata.py  tracking.py  video.py  wax9.py
EdiHeadyTrack-0.1.17/: MANIFEST.in  PKG-INFO  README.md  setup.cfg
EdiHeadyTrack-0.1.23/: PKG-INFO  setup.cfg
EdiHeadyTrack/3DDFA_v2/: demo_video.py
EdiHeadyTrack/TDDFA_v2/: TDDFA.py  TDDFA_ONNX.py  demo_video.py  requirements.txt
EdiHeadyTrack/TDDFA_v2/FaceBoxes/utils/: nms_wrapper.py
EdiHeadyTrack/TDDFA_v2/FaceBoxes/utils/nms/: cpu_nms.c
EdiHeadyTrack/TDDFA_v2/FaceBoxes/weights/: FaceBoxesProd.onnx
EdiHeadyTrack/TDDFA_v2/Sim3DR/: Sim3DR.py
EdiHeadyTrack/TDDFA_v2/bfm/: bfm.py  bfm_onnx.py
EdiHeadyTrack/TDDFA_v2/configs/: mb1_120x120.yml
EdiHeadyTrack/TDDFA_v2/utils/: functions.py  newpose.py  onnx.py  pose.py  render.py
EdiHeadyTrack/resources/: example_imu.csv
archives/: gui.py
data/calibration/: camera_distortion.csv  camera_matrix.csv  rotation_vectors.csv  translation_vectors.csv
data/data archives/: 240_head_final.csv
data/sensor data/: head_240_1_sensor.csv
data/tracking data/: output.csv  output_filtered.csv  output_final.csv
docs/: Untitled.ipynb  api.rst  conf.py  example.ipynb  index.rst  installation.rst  license.rst  requirements.txt
docs/api/: index.rst  types.rst
docs/source/: conf.py  index.rst
resources/: 240_del_final.csv  240_del_sensor.csv  head_acceleration_TDDFA.csv  head_pose_TDDFA.csv  head_velocity_TDDFA.csv
resources/high_speed_wax9/: theta_0_v_43.csv  theta_0_v_54.csv  theta_0_v_60.csv  theta_45_v_46.csv  theta_45_v_50.csv  theta_45_v_59.csv
test/: test_EdiHeadyTrack.py  test_calibrating.py  test_camera.py  test_facedetector.py  test_filter.py  test_imu.py  test_logging.py  test_plot.py  test_posedetector.py  test_sensordata.py  test_video.py
