[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EdiHeadyTrack"
version = "0.0.7"
authors = [
  { name="Thomas Aston", email="thomas.aston@ed.ac.uk" },
]
description = "Automatic, markerless measurement of head kinematics"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/isDynamics/EdiHeadyTrack"
"Bug Tracker" = "https://github.com/isDynamics/EdiHeadyTrack/issues"