[metadata]
name = EdiHeadyTrack
version = 0.0.1
author = Thomas Aston
author_email = thomas.aston@ed.ac.uk
description = Automatic, markerless measurement of head kinematics using mediapipe and OpenCV
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isDynamics/EdiHeadyTrack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    matplotlib
    mediapipe
    mock
    numpy
    pandas
    scipy
    setuptools
    sphinx_rtd_theme
    tqdm
    
python_requires = >=3.7
include_package_data = True