[metadata]
name = EdiHeadyTrack
version = 0.2.0
author = Thomas Aston
author_email = thomas.aston@ed.ac.uk
description = Automatic, markerless measurement of head kinematics using from video
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isDynamics/EdiHeadyTrack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    matplotlib
    mediapipe
    mock
    numpy
    pandas
    scipy
    setuptools
    sphinx_rtd_theme
    sphinx_mdinclude
    tqdm
    
python_requires = >=3.9
include_package_data = True